add aggregation endpoint
